--- a/src/core/tsconfig.json
+++ b/src/core/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   }
 }
